Misc clean ups.